--- a/submit.html
+++ b/submit.html
@@ -79,78 +79,16 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h1>
-                                <!-- <span>B</span><span>e</span><span>n</span><span>c</span><span>h</span> -->
-                                <span style="color: #8DB1CD;">B</span><span style="color: #8DB1CD;">e</span><span
-                                    style="color: #8DB1CD;">n</span><span style="color: #8DB1CD;">c</span><span
-                                    style="color: #8DB1CD;">h</span><span style="color: #D08983;">B</span><span
-                                    style="color: #D08983;">e</span><span style="color: #D08983;">n</span><span
-                                    style="color: #D08983;">c</span><span style="color: #D08983;">h</span>
-                            </h1>
                             <p style="font-size: 20px;">
-                                A <span style="color:#8DB1CD"><u><strong>Bench</strong></u></span>mark for evaluating
-                                the sensitivity and
-                                diversity
-                                of multi-task <span style="color:#D08983"><u><strong>Bench</strong></u></span>marks.
+                                Given that the calculation of diversity and sensitivity demands substantial
+                                computational resources, we currently do not offer a standalone submission option.
+                                <strong>
+                                    We kindly ask you to contact us via <a
+                                        href="mailto:guanhua.zhang@tuebingen.mpg.de">email</a> for any requests to
+                                    include or modify your benchmark.
+                                </strong>
+                                We appreciate your understanding and look forward to assisting you further.
                             </p>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <p>
-                                <span><a href="https://sf.is.mpg.de/"><img src="assets/mpi.png" height="130"></a></span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="section full-height">
-        <div class="absolute-center">
-            <div class="section">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12" style="color: #444444;">
-                            <h1 style="font-size: 40px; color: #777777;">
-                                Overview
-                            </h1>
-                            <br>
-                            <br>
-                            <div style="font-size: 20px; text-align: left;">
-                                We examine multi-task benchmarks in machine learning through the lens of social choice
-                                theory.
-                                We draw an analogy between benchmarks and electoral systems, where models are candidates
-                                and tasks are voters.
-                                Benchmarks are accordingly divided into two classes:
-                                <ul style="margin-top: 10px;">
-                                    <li> <strong>Cardinal benchmarks</strong> that aggregate numerical scores into one
-                                        model ranking</li>
-                                    <li> <strong>Ordinal benchmarks</strong> that aggregate rankings for each task.</li>
-                                </ul>
-                                <br>
-                                Inspired by Arrow's theorem, we introduce two quantitative measures of benchmarks:
-                                <ul style="margin-top: 10px;">
-                                    <li>
-                                        <strong>Sensitivity</strong> that quantifies the impact that irrelevant changes
-                                        to tasks have on a benchmark.
-                                    </li>
-                                    <li>
-                                        <strong>Diversity</strong> that captures the degree of disagreement in model
-                                        rankings across tasks.
-                                    </li>
-                                </ul>
-                                <br>
-                                We maintain a benchmark for evaluating the sensitivity and diversity of multi-task
-                                benchmarks, named BenchBench.
-                                Initially, we present results on seven cardinal benchmarks
-                                and eleven ordinal benchmarks, which demonstrate a clear trade-off between diversity
-                                and stability.
-                                <strong>The more diverse a multi-task benchmark, the more sensitive to trivial
-                                    changes it
-                                    is.</strong>
-                            </div>
                         </div>
                     </div>
                 </div>
