update paper and doc link

--- a/submit.html
+++ b/submit.html
@@ -51,14 +51,14 @@
                                     </a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">Paper</a>
+                                    <a class="nav-link" href="https://arxiv.org/pdf/2405.01719">Paper</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link"
                                         href="https://github.com/socialfoundations/benchbench/tree/main">Code</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="./docs.html">Documentation</a>
+                                    <a class="nav-link" href="./documentation/index.html">Documentation</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
                                     <a class="nav-link" href="submit.html">Submit</a>
